testdata/golden/sema/valid/ret_block_dead_legacy_tail.fmt
fn main() -> int {
    let x = {
        ret 1;
        2;
    };
    return x;
}
