testdata/golden/sema/invalid/raw_pointers/alias_ptr.fmt
type Ptr = *int;

fn main() -> int {
    let x: Ptr = nothing;
    return 0;
}
